<resources>
    <string name="app_name">StashAway Assignment</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_sa__main">StashAway</string>
    <string name="font_MontserratRegular">Montserrat-Regular.ttf</string>
    <string name="font_OpenSans">OpenSans-Regular.ttf</string>
    <string name="excuse_me">EXCUSE ME</string>
    <string name="please_enter_user_name">Enter your display name</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="login">LOGIN</string>
    <string name="hint_userName">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgotpassword">Forgotten your password?</string>
    <string name="loginwithFB">LOGIN WITH FACEBOOK</string>
    <string name="question_sign_up">Don’t have an account? <b>Sign up.</b></string>
    <string name="logout">Logout</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="enter_email">Enter a new password for username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signUpWithFB">sign up with facebook</string>
    <string name="signUpWithEmail">sign up with email</string>
    <string name="username">Username</string>
    <string name="term">By signing up you accept our Terms Of Service and our Privacy Policy</string>
    <string name="doLogin">Already have an account? <b>Log in.</b></string>
    <string name="fb_login_protocol_scheme">137058216774102</string>
    <string name="facebook_app_id">666573436866570</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logtout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUpWithGuest">Login As Guest</string>

</resources>
