<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dp__welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="com.nhatdear.sademo.activities.SA_LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/biglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <com.nhatdear.sademo.components.MyCustomTextView
        android:id="@+id/signupText"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biglogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/reset_password"
        android:textSize="22sp"
        app:tv_customFont="@string/font_MontserratRegular" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.nhatdear.sademo.components.MyCustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/btn_bg_black_border_bottom_only"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                app:bt_customFont="@string/font_OpenSans" />
        </android.support.design.widget.TextInputLayout>


        <com.nhatdear.sademo.components.MyCustomButtonView
            android:id="@+id/btn_reset"
            style="@style/ButtonStyleDark"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.2"
            android:text="@string/reset"
            android:textSize="12sp"
            app:bt_customFont="@string/font_MontserratRegular" />
    </LinearLayout>
</RelativeLayout>
