<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dp__welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="com.nhatdear.sademo.activities.SA_LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/biglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <com.nhatdear.sademo.components.MyCustomTextView
        android:id="@+id/signupText"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biglogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textSize="22sp"
        app:tv_customFont="@string/font_MontserratRegular" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/btn_signUp"
        android:layout_below="@+id/signupText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.nhatdear.sademo.components.MyCustomEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/btn_bg_black_border_bottom_only"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                app:bt_customFont="@string/font_OpenSans" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.nhatdear.sademo.components.MyCustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/btn_bg_black_border_bottom_only"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="17sp"
                app:bt_customFont="@string/font_OpenSans" />
        </android.support.design.widget.TextInputLayout>

        <com.nhatdear.sademo.components.MyCustomButtonView
            android:id="@+id/btn_login"
            style="@style/ButtonStyleDark"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.2"
            android:text="@string/login"
            android:textSize="12sp"
            app:bt_customFont="@string/font_MontserratRegular" />

        <LinearLayout
            android:id="@+id/ln_signUpFB"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginTop="21dp"
            android:background="@color/com_facebook_blue"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/com_facebook_button_icon_white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <com.nhatdear.sademo.components.MyCustomTextView
                    android:id="@+id/btn_signUpFB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:letterSpacing="0.2"
                    android:paddingLeft="10dp"
                    android:text="@string/loginwithFB"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp"
                    app:tv_customFont="@string/font_MontserratRegular" />
            </RelativeLayout>

        </LinearLayout>

        <com.nhatdear.sademo.components.MyCustomTextView
            android:id="@+id/reset_password"
            style="@style/LabelStyleBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpassword"
            app:tv_customFont="@string/font_OpenSans" />
    </LinearLayout>

    <com.nhatdear.sademo.components.MyCustomButtonView
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/question_sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:bt_customFont="@string/font_OpenSans" />
</RelativeLayout>
